add main struktur

--- a/source from member/main.html
+++ b/source from member/main.html
@@ -5,24 +5,16 @@
 <head>
     <title>CEB i13 - SpaceX website profile</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="style-main.css">
 </head>
 
 <body>
-    <header>
-        <a href="#"><img src="./img/logo.png" class="logo"></a>
-        <div class="header-cont">
-            <a href="#" class="btn">LAUNCHES</a>
-            <a href="#" class="btn">MISSIONS</a>
-            <a href="#" class="btn selected">VEHICLES</a>
-        </div>
-    </header>
     <main>
         <div class="container">
             <h1>Falcon 1</h1>
             <div class="line"></div>
             <div class="side-left">
-                <img src="../i13.github.io/img/falcon1.jpg" alt="Falcon 1" class="img-content">
+                <img src="falcon1.jpg" alt="Falcon 1" class="img-content">
             </div>
             <div class="side-right">
                 <p id="status">STATUS: INACTIVE</p>
