--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CEB i13 - SpaceX website profile</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
@@ -23,7 +24,7 @@
             <h1>Falcon 1</h1>
             <div class="line"></div>
             <div class="side-left">
-                <img src="../i13.github.io/img/falcon1.jpg" alt="Falcon 1" class="img-content">
+                <img src="./img/falcon1.jpg" alt="Falcon 1" class="img-content">
             </div>
             <div class="side-right">
                 <p id="status">STATUS: INACTIVE</p>
@@ -47,14 +48,15 @@
     </main>
 
     <footer>
-         <img src="../i13.github.io/img/logo.png" alt="">
-                <a href="#" class="socmed" id="ig"><img src="../i13.github.io/img/ig.png" alt=""></a>
-                <a href="#" class="socmed" id="tw"><img src="../i13.github.io/img/twitter.png" alt=""></a>
-        <div class="main-copy">
-            <p class="copy">Copyright <span>&copy;</span> I13</p>  
-        </div>
-              
+         <img src="./img/logo.png" alt=""><br>
+                <p class="follow">Follow us :</p>
+                <a href="#" class="socmed" id="ig"><img src="./img/ig.png" alt=""></a>
+                <a href="#" class="socmed" id="tw"><img src="./img/twitter.png" alt=""></a>
+                <a href="#" class="socmed" id="fb"><img src="./img/fb.jpeg" alt=""></a>
+                <a href="#" class="socmed" id="in"><img src="./img/in.jpeg" alt=""></a>        
     </footer>
+    <p class="copy">Copyright <span>&copy;</span> I13</p>  
+
 </body>
 
 </html>
