--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <header>
       <a href="#"><img src="./img/logo.png" class="logo" /></a>
+      <span class="fa fa-bars menu-icon"></span>
       <div class="header-cont">
         <a href="#" class="btn">LAUNCHES</a>
         <a href="#" class="btn">MISSIONS</a>
